DTSRD-1992- Add a check for zero byte characters durng file upload